--- a/dating-app-web-panel/public/index.html
+++ b/dating-app-web-panel/public/index.html
@@ -12,7 +12,6 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpY6rxAaNqSaQLwprvPDnzCw-e-KsQEME&libraries=places"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,9 +23,9 @@
     -->
     <title>React App</title>
 </head>
-  <body>
+<body>
     <noscript>
-      You need to enable JavaScript to run this app.
+        You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +38,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpY6rxAaNqSaQLwprvPDnzCw-e-KsQEME&libraries=places"></script>
+    <!--<script async="" src="https://maps.googleapis.com/maps/api/js?callback=_$_google_map_initialize_$_&amp;key=AIzaSyCpY6rxAaNqSaQLwprvPDnzCw-e-KsQEME&amp;libraries=visualization,places"></script>-->
+</body>
+
 </html>
